# fiap-mle-tech-challenge-fase-1

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ml_canvas.md  model_card.md
models/: churn_mlp.pt  churn_mlp_pipeline.joblib  comparison_table.csv
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: churn_api.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/: config.py  train_pipeline.py
src/api/: main.py  middleware.py  schemas.py
src/data/: loader.py  preprocessing.py
src/evaluation/: metrics.py
src/models/: baseline.py  mlp.py  trainer.py
src/tracking/: mlflow_utils.py
tests/: test_api.py  test_api_coverage.py  test_baseline.py  test_loader_extended.py  test_metrics.py  test_mlflow_utils.py  test_preprocessing.py  test_schema.py  test_smoke.py  test_trainer_extended.py
