[project]
name = "tech-challenge-1"
version = "0.1.0"
description = "Churn prediction pipeline — FIAP Tech Challenge Fase 01"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.13.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandera>=0.19.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["src/train_pipeline.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
